header and footer pages added

--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -128,8 +128,8 @@ a.secondary {
   }
 
   .page {
-    --background: #E8D2A2;
-    --foreground: #E8D2A2;
+    --background: #f8f1e3;
+    --foreground: #f8f1e3;
 
     --text-primary: #203E1E;
     --text-secondary: #203E1E;
