--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -33,19 +33,27 @@
 .intro {
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
-  text-align: left;
+  /* align-items: flex-start;
+  text-align: left; */
   gap: 24px;
 }
 
-.intro h1 {
-  font-size: 32px;
-  text-align: center;
-  font-weight: 700;
-  color: var(--text-primary);
+.main h1,
+.main h2
+{
+  padding-top: 4rem;
 }
 
-.intro p {
+
+.main h1, 
+.main h2, 
+.main h3 {
+  text-align: center;
+  font-weight: 700;
+  color: var(--text-primary); 
+}
+
+.main p {
   font-size: 18px;
   text-align: center;
   line-height: 32px;
@@ -86,12 +94,13 @@ a.primary {
   color: var(--background);
   gap: 8px;
   font-weight: 700; 
-  padding: .75rem;
+  padding: .75em;
   border-radius: 8px;
   width: 100%;
 }
 
 a.secondary {
+  color: var(--text-secondary);
   border: solid 1px #999;
   padding: .75rem;
   border-radius: 8px;
@@ -110,10 +119,53 @@ a.secondary:hover {
   color: var(--button-secondary-hover-text);
 }
 
+/* .featured {
+  padding-bottom: 2rem;
+} */
+
+.buttons {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 24px;
+  text-align: center;
+}
+
+.featured {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  text-align: left;
+  gap: 24px;
+}
+
+/* .why {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  text-align: center;
+  gap: 24px;
+} */
+
+.whyImage {
+  display: flex;
+  justify-content: center;
+  margin: 0 auto;
+  padding: 2rem 0;
+}
+
 @media (min-width: 600px) {
   .main {
     padding: 48px 24px;
   }
+  
+  .main h1,
+  .main h2,
+  .main h3 {
+    width: 100%;
+    text-align: center;
+  }
+
 
   .intro {
     gap: 16px;
@@ -124,12 +176,35 @@ a.secondary:hover {
     line-height: 40px;
     letter-spacing: -1.92px;
   }
-}
-
-@media (prefers-color-scheme: dark) {
-  .logo {
-    filter: invert();
+  
+  a.primary,
+  a.secondary {
+    width: 50%;
   }
 
+  a.secondary {
+    margin: 0 auto;
+  }
 
+  .buttons {
+    margin: 0 auto;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    width: 50%;
+    gap: 24px;
+  }
+
+  /* .featured {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  text-align: left;
+  gap: 24px;
+} */
+
+    .why {
+      display: flex;
+    }
 }
+
