--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -53,10 +53,10 @@ a {
 }
 
 .logo {
-  font-size: 40px;
+  font-size: 32px;
   font-weight: 700;
   color: var(--text-primary);
-  font-family: var(--font-lovers);
+  font-family: var(--font-paris);
 }
 
 .nav-section {
