--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -14,7 +14,7 @@
   min-height: 100vh;
   align-items: center;
   justify-content: center;
-  font-family: var(--kameron);
+  font-family: var(--inter);
   background-color: var(--background);
 }
 
