--- a/src/app/shop/product.module.css
+++ b/src/app/shop/product.module.css
@@ -33,15 +33,17 @@
 .preview {
     background: #fff;
     padding: 1.5rem;
+    height: 100%;
     border-radius: 8px;
     box-shadow: 0 1px 2px rgba(0, 0, 0, 0.04);
 }
 
 .previewImage {
-    width: 100%;
-    height: auto;
+    width: 65%;
+    height: 750px;
     display: block;
     object-fit: contain;
+    margin: 0 auto;
 }
 
 .info {
@@ -205,6 +207,7 @@
 
 .reviewsSection {
     margin-top: 3rem;
+    width: 70%;
 }
 
 .reviewsSection h2 {
@@ -219,6 +222,7 @@
     padding: 1.5rem;
     border-radius: 8px;
     box-shadow: 0 1px 2px rgba(0, 0, 0, 0.04);
+    margin-top: 1rem;
 }
 
 .reviewHeader {
@@ -243,6 +247,120 @@
     font-size: 0.9rem;
     line-height: 1.6;
     margin: 0;
+}
+
+.artisanCard {
+  padding: 1rem;
+  border-radius: 0.5rem;
+  background-color: #f7f7f7;
+  border: 1px solid #eee;
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+}
+
+.artisanCard:hover {
+  transform: translateY(-2px); 
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
+}
+
+.initialsCircle {
+  width: 3rem;
+  height: 3rem;
+  border-radius: 50%;
+  background-color: #214332;
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 1rem;
+  font-weight: bold;
+}
+
+.artisanCard p {
+  margin: 0;
+  font-size: 0.85rem;
+  color: #555;
+}
+
+.artisanName {
+  margin: 0;
+  font-size: 1rem;
+  font-weight: 600;
+  color: #333;
+  line-height: 1.2;
+}
+
+.reviewFormSection {
+  margin-top: 2rem;
+  padding-top: 1rem;
+  border-top: 1px solid #e5e5e5;
+}
+
+.reviewFormSection h3 {
+  font-size: 1.1rem;
+  font-weight: 600;
+  margin-bottom: 1rem;
+}
+
+.reviewFormContainer {
+  background: white;
+  border: 1px solid #ececec;
+  border-radius: 10px;
+  padding: 1.5rem;
+  margin-top: 1rem;
+}
+
+.reviewForm {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.reviewForm label {
+  font-weight: 600;
+  font-size: 0.95rem;
+  color: #222;
+}
+
+.reviewForm input,
+.reviewForm select,
+.reviewForm textarea {
+  width: 100%;
+  padding: 0.7rem 0.9rem;
+  border: 1px solid #dcdcdc;
+  border-radius: 6px;
+  font-size: 0.95rem;
+  background: #fafafa;
+  transition: border-color 0.2s, background 0.2s;
+  resize: none;
+}
+
+.reviewForm input:focus,
+.reviewForm select:focus,
+.reviewForm textarea:focus {
+  background: #fff;
+  border-color: #888;
+  outline: none;
+  resize: none;
+}
+
+.submitButton {
+    background: #174f2d;
+    color: #fff;
+    border-radius: 8;
+    font-weight: 600;
+    width: "20%";
+    padding: 1rem;
+}
+
+.submitButton:hover {
+    background: #24834a;
+    color: #fff;
+    border-radius: 8;
+    font-weight: 600;
+    width: "20%";
+    padding: 1rem;
 }
 
 @media (max-width: 900px) {
